--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.hibernate.ddl-auto =create
 spring.datasource.initialization-mode=embedded
 
 spring.datasource.hikari.auto-commit=false
+jwt.secret = MarjanGecaKarafiloski
